# treinar-sdl

LazyFoo/: Makefile  lazyfoo  main.h
assets/: Alien.xcf  Player.xcf  agua.xcf  grama.xcf  terra.xcf
src/: CMakeCache.txt  CMakeLists.txt  Components.h  ECS.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Makefile  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  cmake_install.cmake  main.cpp  main.h  teste
src/ECS/: ECS.h  PositionComponent.h  SpriteComponent.h
