cmake_minimum_required (VERSION 2.6)
project (teste)
INCLUDE(FindPkgConfig)
INCLUDE(FindSDL REQUIRED)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)
include_directories( ${SDL2_INCLUDE_DIRS})
include_directories( ${SDL2IMAGE_INCLUDE_DIRS})
add_library( Game Game.cpp)
add_library( TextureManager TextureManager.cpp)
add_library( GameObject GameObject.cpp)
add_library( Map Map.cpp)
add_executable(teste main.cpp)
target_link_libraries ( teste Game)
target_link_libraries ( teste Map)
target_link_libraries ( teste GameObject)
target_link_libraries ( teste TextureManager)
target_link_libraries ( teste ${SDL2_LIBRARIES})
target_link_libraries ( teste ${SDL2IMAGE_LIBRARIES})

